[package]
edition = "2021"
name = "embassy-stm32g4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies.rtic]
path="../../rtic"
version = "=2.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
path="../../rtic-monotonics"
version = "=1.5"
features = ["cortex-m-systick"]

[dependencies.rtic-sync]
path="../../rtic-sync"
version = "=1.3"

[dependencies]
# Change stm32g431cb to your chip name, if necessary. Also change .cargo/config.toml
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
