[package]
name = "esp32-c3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
rtic = { path = "../../rtic/" }
rtic-monotonics = {path = "../../rtic-monotonics/"}
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp32c3 = {version = "0.27.0", features = ["critical-section"]}
esp-println = { version = "0.13.0", features = ["esp32c3"] }

[features]
test-critical-section = []
riscv-esp32c3-backend = ["rtic/riscv-esp32c3-backend", "rtic-monotonics/esp32c3-systimer"]
