[package]
name = "esp32-c6"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]


[dependencies]
esp-backtrace = { version = "0.17.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-alloc = "0.10.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "~1.1.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.15.0", features = ["esp32c6"] }
esp32c6 = { version = "0.23.2", features = ["critical-section"] }
rtic = { path = "../../rtic/", features = ["riscv-esp32c6-backend"] }
rtic-monotonics = { path = "../../rtic-monotonics/" }
