[package]
name = "rtic_hifive1"
categories = ["embedded", "no-std"]
description = "Examples of RTIC apps for the HiFive1 board"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rtic = { path = "../../rtic" }
hifive1 = { git = "https://github.com/romancardenas/hifive1.git", features = ["board-redv"] }
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "master", features = ["rt"]}
riscv-rt = {git = "https://github.com/rust-embedded/riscv.git", features = ["single-hart"]}
# riscv-rt = {path = "../../../riscv/riscv-rt", features = ["single-hart"]}
riscv = {git = "https://github.com/rust-embedded/riscv.git"}
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }

[features]
riscv-clint-backend = ["rtic/riscv-clint-backend"]
test-critical-section = []
