[package]
name = "rtic_hifive1"
categories = ["embedded", "no-std"]
description = "Examples of RTIC apps for the HiFive1 board"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rtic = { path = "../../rtic" }
hifive1 = { git = "https://github.com/romancardenas/hifive1.git", features = ["board-redv"] }
e310x = { git = "https://github.com/greenlsi/e310x.git", features = ["rt"]}
riscv-rt = {version = "0.12.1", features = ["single-hart"]}
riscv = "0.11.0"
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }

[target.'cfg(target_has_atomic = "32")'.dependencies]
heapless = "0.8.0"

[target.'cfg(not(target_has_atomic = "32"))'.features]
heapless = { version = "0.8.0", features = ["portable-atomic-unsafe-assume-single-core"] }

[features]
riscv-clint-backend = ["rtic/riscv-clint-backend"]
test-critical-section = []
