[package]
name = "rtic_lm3s6965"
categories = ["embedded", "no-std"]
description = "Examples of RTIC apps for the lm3s6965 chip"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
heapless = "0.8"
lm3s6965 = "0.2"
cortex-m-semihosting = "0.5.0"
rtic-time = { path = "../../rtic-time" }
rtic-sync = { path = "../../rtic-sync" }
rtic-monotonics = { path = "../../rtic-monotonics", features = ["cortex-m-systick"] }

[dependencies.futures]
version = "0.3.26"
default-features = false
features = ["async-await"]

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.6.0"

[target.thumbv6m-none-eabi.dependencies]
rtic = { path = "../../rtic", features = ["thumbv6-backend", "test-critical-section"] }

[target.thumbv7m-none-eabi.dependencies]
rtic = { path = "../../rtic", features = ["thumbv7-backend", "test-critical-section"] }
