[package]
name = "bluepill_blinky"
version = "0.1.0"

edition = "2021"
authors = [
    "Ronald Weber <ronaldxweber@gmail.com>",
    "Simsys <winfried.simon@gmail.com>",
]
description = "Example blinky for BluePill"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]

[dependencies.rtic]
path = "../../rtic"
version = "2.1.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
path = "../../rtic-monotonics"
version = "2.0.3"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies]
embedded-hal = "1.0.0"
panic-rtt-target = { version = "0.2.0" }
rtt-target = { version = "0.6.1" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "bluepill_blinky"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
