[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f3-blinky"
version = "0.1.0"

[workspace]

[dependencies.rtic]
path = "../../rtic"
version = "=2.0.0-alpha.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
path = "../../rtic-monotonics"
version = "=1.0.0-alpha.2"
features = ["cortex-m-systick"]

[dependencies]
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.9.2"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3-blinky"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
