[workspace]

[package]
authors = ["<Milton Sosa <milton.eduardo.sosa@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f411_encoder_polling"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
rtic = {version = "2.1.1", features=["thumbv7-backend", "rtic-monotonics"]}
panic-halt = "0.2.0"
embedded-hal = "1.0.0"
defmt = "0.3.5"
defmt-rtt = { version = "0.4.0"}
rotary-encoder-embedded = "0.3.0"
hd44780-driver = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f411"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411_encoder_polling"
test = false
bench = false

