[workspace]

[package]
authors = ["<Milton Sosa <milton.eduardo.sosa@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f411_pwm_generation_and_dwt_cycle_counter"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
rtic = {path = "../../rtic", features=["thumbv7-backend"]}
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
defmt = "1.0.1"
defmt-rtt = { version = "1.1.0"}
rtic-sync = { path = "../../rtic-sync" }

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f411"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411_pwm_generation_and_dwt_cycle_counter"
test = false
bench = false

